# FACTO

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
calibrator/: runner.py
examples/: config_example.py  example.py  minimal_example.py  minimal_modelgen_example.py  random_seed.py
facto/: utils.py
facto/inputgen/argtuple/: engine.py  gen.py
facto/inputgen/argument/: engine.py  gen.py  type.py
facto/inputgen/attribute/: engine.py  model.py  solve.py
facto/modelgen/: gen.py
facto/specdb/: db.py  default.py  dtypes.py  function.py
facto/utils/: dtypes.py
inputgen/argtuple/: engine.py  gen.py
inputgen/argument/: engine.py  gen.py  type.py
inputgen/attribute/: engine.py  model.py  solve.py
inputgen/specs/: model.py
inputgen/utils/: random_manager.py
inputgen/variable/: constants.py  gen.py  solve.py  space.py  type.py  utils.py
specdb/: db.py  default.py  dtypes.py  function.py
test/calibrator/: test_runner.py
test/inputgen/: test_argtuple_engine.py  test_argtuple_generator.py  test_argument_attributes.py  test_argument_generator.py  test_argument_types.py  test_attribute_engine.py  test_attribute_solver.py  test_config.py  test_constraints.py  test_meta_arg_engine.py  test_specs.py  test_structural_engine.py  test_variable_generation.py  test_variable_solving.py  test_variable_space.py  test_variable_types.py
test/specdb/: __init__.py  base_model_test.py  base_test.py  test_executorch_portable.py  test_model_cpu.py  test_specdb.py  test_specdb_cpu.py  test_specdb_mps.py
(+8 files in other folders)
