[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facto"
version = "0.1.0"
authors = [
    {name = "Manuel Candales"}
]
description = "Framework for Algorithmic Correctness Testing of Operators"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch"
]

[project.urls]
Homepage = "https://github.com/meta-pytorch/FACTO"

[tool.setuptools.packages.find]
include = ["facto", "facto.*"]
